platform/apps/policies/manifests/namespace-labels.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: va-prod
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.31
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: va-stage
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: va-dev
  labels:
    pod-security.kubernetes.io/enforce: baseline
